# ORB_TopStep

./: .gitignore  10_06_progress.md  10_07_implementation.md  10_07_progress.md  10_08_project_review.md  API_DOCUMENTATION.md  BACKTEST_AUDIT_REPORT.md  BACKTEST_FIX_SUMMARY.md  BACKTEST_RUN_SUMMARY.md  CHANGELOG.md  CODE_AUDIT_REPORT.md  COMPLETE_SYSTEM_SUMMARY.md  CONFIG_IMPLEMENTATION.md  CONSISTENCY_ANALYSIS.md  DATA_IMPLEMENTATION.md  EVENT_LOOP_IMPLEMENTATION.md  FACTORS_IMPLEMENTATION.md  FINAL_PROJECT_SUMMARY.md  GOVERNANCE_IMPLEMENTATION.md  HIGH_RESOLUTION_DATA_ANALYSIS.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTITUTIONAL_STRATEGY_PROGRESS.md  INTEGRATION_SUCCESS_SUMMARY.md  LICENSE  MBP10_INTEGRATION_PLAN.md  MULTI_PLAYBOOK_IMPLEMENTATION_PLAN.md  MULTI_PLAYBOOK_SYSTEM_COMPLETE.md  MULTI_TIMEFRAME_DATA.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  ORB_2.0_COMPLETE.md  ORB_2.0_IMPLEMENTATION_STATUS.md  ORB_2_BACKTEST_SUCCESS.md  OR_IMPLEMENTATION.md  PHASE_1_1_RESULTS.md  PHASE_1_COMPARISON.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  (+44 more)
benchmarks/: benchmark_optimizations.py  profile_event_loop.py
config/: aggressive.yaml  conservative.yaml  default.yaml
docs/: config.md  factors.md  index.md  modules.md  multi_instrument_features.md
examples/: example_backtest.py
orb_confluence/: __init__.py  reporting.py
scripts/: add_mbp10_to_playbooks.py  analyze_mbp10_data.py  audit_backtest_results.py  convert_databento_to_json.py  create_multi_timeframe_data.py  create_trades_from_real_data.py  fetch_1m_futures_data.py  fetch_futures_data.py  generate_docs.py  generate_realistic_trades_with_bars.py  optimize_es_only.py  optimize_es_profitability.py  optimize_parameters.py  run_3asset_portfolio.py  run_multi_instrument_backtest.py  run_real_data_backtest.py  validate_es.py  (+2 more)
(+183 files in other folders)
